--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -4297,7 +4297,7 @@
   device:
     type: desktop
     brand: Apple
-    model: MacBook Air 13" (2013)
+    model: MacBook Air 13" (2013-2014)
   os_family: Mac
   browser_family: Safari
 - 
