--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -5245,7 +5245,7 @@
   device:
     type: tv
     brand: Telefunken
-    model: MB95
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7611,7 +7611,7 @@
   device:
     type: tv
     brand: Saba
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7665,7 +7665,7 @@
   device:
     type: tv
     brand: Haier
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7701,7 +7701,7 @@
   device:
     type: tv
     brand: Laurus
-    model: MB130
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7719,7 +7719,7 @@
   device:
     type: tv
     brand: Fuego
-    model: MB211
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7737,7 +7737,7 @@
   device:
     type: tv
     brand: Technika
-    model: MB211
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7755,7 +7755,7 @@
   device:
     type: tv
     brand: GoGEN
-    model: MB110
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7773,7 +7773,7 @@
   device:
     type: tv
     brand: KUBO
-    model: MB120
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7791,7 +7791,7 @@
   device:
     type: tv
     brand: VOX
-    model: MB130
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7808,8 +7808,8 @@
     engine_version: ""
   device:
     type: tv
-    brand: Electronia
-    model: MB110
+    brand: ELECTRONIA
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7827,7 +7827,7 @@
   device:
     type: tv
     brand: WELLINGTON
-    model: MB211
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7845,7 +7845,7 @@
   device:
     type: tv
     brand: REGAL
-    model: MB211
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -7899,7 +7899,7 @@
   device:
     type: tv
     brand: Lifemaxx
-    model: MB120
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
