--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -106,11 +106,9 @@ DMM:
 
 # Electronia
 Electronia:
-  regex: 'ELECTRONIA'
+  regex: 'ELECTRONIA[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB110'
-      model: 'MB110'
+  model: ''
 
 # Essentielb
 Essentielb:
@@ -132,19 +130,15 @@ FU:
 
 # Fuego
 Fuego:
-  regex: 'FUEGO'
+  regex: 'FUEGO[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB211'
-      model: 'MB211'
+  model: ''
 
 # GoGEN (https://www.gogen.cz/)
 GoGEN:
-  regex: 'GOGEN'
+  regex: 'GOGEN[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB110'
-      model: 'MB110'
+  model: ''
 
 # Grundig
 Grundig:
@@ -157,8 +151,6 @@ Haier:
   regex: '(?:HHW_)?HAIER'
   device: 'tv'
   models:
-    - regex: 'MB110'
-      model: 'MB110'
     - regex: 'LE55X7000U'
       model: 'LE55X7000U'
 
@@ -272,19 +264,15 @@ Kalley:
 
 # KUBO
 KUBO:
-  regex: 'KUBO'
+  regex: 'KUBO[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB120'
-      model: 'MB120'
+  model: ''
 
 # Laurus
 Laurus:
-  regex: 'LAURUS'
+  regex: 'LAURUS[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB130'
-      model: 'MB130'
+  model: ''
 
 # LG
 LG:
@@ -326,11 +314,9 @@ LG:
 
 # Lifemaxx
 Lifemaxx:
-  regex: 'Lifemaxx'
+  regex: 'Lifemaxx[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB120'
-      model: 'MB120'
+  model: ''
 
 # Linsar
 Linsar:
@@ -364,9 +350,7 @@ MediaTek:
 Medion:
   regex: 'Medion'
   device: 'tv'
-  models:
-    - regex: '(MB[0-9]{2})'
-      model: '$1'
+  model: ''
 
 # Miray
 Miray:
@@ -462,19 +446,15 @@ Qilive:
 
 # REGAL
 REGAL:
-  regex: 'REGAL'
+  regex: 'REGAL[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB211'
-      model: 'MB211'
+  model: ''
 
 # Saba
 Saba:
-  regex: 'Saba'
+  regex: 'Saba[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB110'
-      model: 'MB110'
+  model: ''
 
 # Salora
 Salora:
@@ -557,20 +537,14 @@ Sony:
   regex: 'Sony'
   device: 'tv'
   models:
-    - regex: 'KDL32W705B'
-      model: 'KDL32W705B'
-    - regex: 'KD-43X8305C'
-      model: 'KD-43X8305C'
-    - regex: 'KD-49X8005C'
-      model: 'KD-49X8005C'
-    - regex: 'KDL-40W660E'
-      model: 'KDL-40W660E'
     - regex: 'KDL-GR1'
       model: 'KDL-GR1'
     - regex: 'KDL-GN([56])'
       model: 'KDL-GN$1'
     - regex: 'BRAVIA (VH1|4K VH2)'
       model: 'BRAVIA $1'
+    - regex: '(KDL?-?[0-9]{2}[A-Z]{1}[0-9]{3}[A-Z]{1})'
+      model: '$1'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
       model: '$1'
 
@@ -592,11 +566,9 @@ SWTV:
 
 # Technika
 Technika:
-  regex: 'TECHNIKA'
+  regex: 'TECHNIKA[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB211'
-      model: 'MB211'
+  model: ''
 
 # TechniSat
 TechniSat:
@@ -624,9 +596,7 @@ Techwood:
 Telefunken:
   regex: 'Telefunken'
   device: 'tv'
-  models:
-    - regex: '(MB[0-9]{2})'
-      model: '$1'
+  model: ''
 
 # TCL
 TCL:
@@ -690,19 +660,15 @@ Videoweb:
 
 # VOX (https://www.voxelectronics.com/)
 VOX:
-  regex: 'VOX'
+  regex: 'VOX[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB130'
-      model: 'MB130'
+  model: ''
 
 # WELLINGTON
 WELLINGTON:
-  regex: 'WELLINGTON'
+  regex: 'WELLINGTON[;,]'
   device: 'tv'
-  models:
-    - regex: 'MB211'
-      model: 'MB211'
+  model: ''
 
 # X.Vision
 X.Vision:
@@ -714,6 +680,4 @@ X.Vision:
 Vestel:
   regex: '(?:Vestel.+VESTEL|VESTEL;)'
   device: 'tv'
-  models:
-    - regex: '(MB[0-9]{2})'
-      model: '$1'
+  model: ''
