--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -4943,7 +4943,7 @@
   device:
     type: tv
     brand: Sony
-    model: KDL-65W859
+    model: KDL-65W859C
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -4997,7 +4997,7 @@
   device:
     type: tv
     brand: Sony
-    model: KDL42W805
+    model: KDL42W805A
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -5825,7 +5825,7 @@
   device:
     type: tv
     brand: Vestel
-    model: MB70
+    model: ""
   os_family: Unknown
   browser_family: NetFront
 - 
@@ -5843,7 +5843,7 @@
   device:
     type: tv
     brand: Vestel
-    model: MB95
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -8148,7 +8148,7 @@
   device:
     type: tv
     brand: Vestel
-    model: MB10
+    model: ""
   os_family: Unknown
   browser_family: NetFront
 - 
