--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -104,8 +104,8 @@ DMM:
   device: 'tv'
   model: 'Dreambox'
 
-# Electronia
-Electronia:
+# ELECTRONIA
+ELECTRONIA:
   regex: 'ELECTRONIA[;,]'
   device: 'tv'
   model: ''
@@ -543,6 +543,8 @@ Sony:
       model: 'KDL-GN$1'
     - regex: 'BRAVIA (VH1|4K VH2)'
       model: 'BRAVIA $1'
+    - regex: '(KDL?-?[0-9]{2}[A-Z]{1}[0-9]{4}[A-Z]{1})'
+      model: '$1'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1}[0-9]{3}[A-Z]{1})'
       model: '$1'
     - regex: '(KDL?-?[0-9]{2}[A-Z]{1,2}[0-9]{1,5})'
