--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13372,6 +13372,9 @@ Thomson:
     - regex: 'Delight TH201'
       device: 'smartphone'
       model: 'Delight TH201'
+    - regex: 'Friendly_TH101'
+      device: 'smartphone'
+      model: 'Friendly TH101'
     - regex: '((?:49|55)UC6306|55UC63|32HD55|40FD54|55UD63)'
       device: 'tv'
       model: '$1'
