--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -2136,7 +2136,7 @@
   device:
     type: tv
     brand: Ikea
-    model: LF1V358
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -3678,7 +3678,7 @@
   device:
     type: tv
     brand: PEAQ
-    model: LF1V350
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -5209,7 +5209,7 @@
   device:
     type: tv
     brand: TCL
-    model: LF1V042
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -5227,7 +5227,7 @@
   device:
     type: tv
     brand: TCL
-    model: LF1V349
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -5371,7 +5371,7 @@
   device:
     type: tv
     brand: Thomson
-    model: LF1V017
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
@@ -5389,7 +5389,7 @@
   device:
     type: tv
     brand: Thomson
-    model: LF1V375
+    model: ""
   os_family: GNU/Linux
   browser_family: Opera
 - 
