--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -224,9 +224,7 @@ Hyundai:
 Ikea:
   regex: 'Ikea'
   device: 'tv'
-  models:
-    - regex: '(LF1V[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Intek
 Intek:
@@ -412,9 +410,7 @@ Panasonic:
 PEAQ:
   regex: 'PEAQ'
   device: 'tv'
-  models:
-    - regex: '(LF1V[0-9]{3})'
-      model: '$1'
+  model: ''
 
 # Philips
 Philips:
@@ -607,8 +603,6 @@ TCL:
   models:
     - regex: '(32D1820|(?:39|55)D2900|32D2930|(?:32|43)S4900)'
       model: '$1'
-    - regex: '(LF1V[0-9]{3})'
-      model: '$1'
 
 # Thomson
 Thomson:
@@ -627,8 +621,6 @@ Thomson:
       model: '$1 49.0"'
     - regex: '(T55D18[SD]FS-01B)'
       model: '$1 55.0"'
-    - regex: '(LF1V[0-9]{3})'
-      model: '$1'
     - regex: '40FB5426'
       model: '40FB5426'
 
