feat(device) renamed model Live to ZenFone Live for ASUS_Z00YD

--- a/Tests/fixtures/smartphone-2.yml
+++ b/Tests/fixtures/smartphone-2.yml
@@ -1373,7 +1373,7 @@
   device:
     type: smartphone
     brand: Asus
-    model: Live
+    model: ZenFone Live
   os_family: Android
   browser_family: Unknown
 - 
