--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2222,14 +2222,12 @@ Asus:
       model: 'ZenFone 2'
     - regex: '(?:ASUS_)?(?:ZenFone 2E)'
       model: 'ZenFone 2E'
-    - regex: '(?:ASUS_)?A007|ZA550KL|ZB553KL|ZB501KL'
+    - regex: '(?:ASUS_)?(?:A007|Z00YD|ZA550KL|ZB553KL|ZB501KL)(?:[);/ ]|$)'
       model: 'ZenFone Live'
-    - regex: '(?:ASUS_)?(X00RD|G552KL)'
+    - regex: '(?:ASUS_)?(?:X00RD|G552KL)'
       model: 'ZenFone Live L1'
     - regex: 'G553KL'
       model: 'ZenFone Lite L1'
-    - regex: '(?:ASUS_)Z00YD'
-      model: 'Live'
     - regex: '(?:ASUS_)?(?:Z00[ERLMTW]D|Z011D|ZE500KL)'
       model: 'ZenFone 2 Laser'
     - regex: '(?:ASUS_)?(?:T00[IQ1]|Z01KD)'
