--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1740,7 +1740,7 @@
   os:
     name: Fire OS
     short_name: FIR
-    version: ""
+    version: "7"
     platform: ""
 -
   user_agent: Mozilla/5.0 (Linux; Andr0id 9; BRAVIA 4K UR1 Build/PTT1.190515.001.S71) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36 OPR/46.0.2207.0 OMI/4.13.5.431.DIA5HBBTV.185 HbbTV/1.5.1 ( DRM; Sony; KDL-GN5; PKG6.4770.0615EUA; ; com.sony.HE.G3.4K; )
