--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -6966,3 +6966,21 @@
     model: ""
   os_family: GNU/Linux
   browser_family: Opera
+-
+  user_agent: Mozilla/5.0 (Linux; Android 8.1.0; HK1 PLUS) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 Safari/537.36
+  os:
+    name: Android
+    version: 8.1.0
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 75.0.3770.143
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Vontar
+    model: HK1 Plus
+  os_family: Android
+  browser_family: Chrome
