Improves detection for ARRIS

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -44,6 +44,14 @@ AOC:
     - regex: '(LE43S5970-20|S50856)'
       model: '$1'
 
+# ARRIS
+ARRIS:
+  regex: 'ARRIS[;,]'
+  device: 'tv'
+  models:
+    - regex: 'FS-ARS-01B'
+      model: 'FS-ARS-01B'
+
 # Atvio
 Atvio:
   regex: 'ATVIO'
