--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9469,3 +9469,21 @@
     model: KEY0000213F1z
   os_family: Other Mobile
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (Linux aarch64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/67.0.3396.99 Safari/537.36 OPR/46.0.2207.0 OMI/4.13.180.Charlie.111 HbbTV/1.5.1 ( PVR; ARRIS; FS-ARS-01B; 5; ; com.arris.FS-ARS-01;) freesat/3.0 (2.3.4) Freesat_STB_BCM72604_2019_ARRIS/5 (ARRIS, FS-ARS-01B, Wired)
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera Devices
+    version: 4.13.180
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: ARRIS
+    model: FS-ARS-01B
+  os_family: GNU/Linux
+  browser_family: Opera
