feat(tests) added test for brand SFR models: StarTrail 3, StarTrail 4, StarTrail 6 4G, StarTrail 7, StarTrail 8, StarTrail 5, StarTrail 6, Staraddict 3
issue #6616

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -35,14 +35,17 @@ SFR:
   models:
     - regex: 'StarXtrem(?:[);/ ]|$)'
       model: 'StarXtrem' # ZTE
-    - regex: 'StarTrail ?4(?:[);/ ]|$)'
-      model: 'StarTrail 4' # ZTE Blade Q
     - regex: 'StarTrail III(?:[);/ ]|$)'
-      model: 'StarTrail 3' # ZTE
+      model: 'StarTrail 3'
     - regex: 'StarTrail II(?:[);/ ]|$)'
       model: 'StarTrail 2' # Huawei Ascend Y200
+    - regex: 'StarTrail[ _]?([1-9])[ _]([34])G(?:[);/ ]|$)' # ZTE
+      model: 'StarTrail $1 $2G'
+    - regex: 'StarTrail[ _]?([1-9])(?:[);/ ]|$)'
+      model: 'StarTrail $1'
     - regex: 'StarTrail(?:[);/ ]|$)'
       model: 'StarTrail' # ZTE
+
     - regex: 'StarShine II(?:[);/ ]|$)'
       model: 'StarShine 2' # ZTE
     - regex: 'StarShine(?:[);/ ]|$)'
