--- a/Tests/fixtures/smartphone-14.yml
+++ b/Tests/fixtures/smartphone-14.yml
@@ -8976,3 +8976,147 @@
     model: N7 Lite
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.0.4; StarTrail III Build/IMM76D) AppleWebKit/535.19 (KHTML, like Gecko) Chrome/18.0.1025.166 Mobile Safari/535.19
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 18.0.1025.166
+    engine: WebKit
+    engine_version: "535.19"
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 3
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.2.2; STARTRAIL 4 Build/JDQ39) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/42.0.2311.111 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 42.0.2311.111
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 4
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.4.4; STARTRAIL 6 4G Build/KTU84P) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/40.0.2214.109 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.4
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 40.0.2214.109
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 6 4G
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 5.1; STARTRAIL7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.143
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 6.0; STARTRAIL 8) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3770.143 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "6.0"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.143
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 8
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 Linux; Android 4.4.2; STARTRAIL5 AppleWebKit/537.36 KHTML, like Gecko Chrome/75.0.3770.101 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 75.0.3770.101
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 5
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 Linux; Android 4.4.2; STARTRAIL6 Build/KOT49H AppleWebKit/537.36 KHTML, like Gecko Chrome/40.0.2214.109 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 40.0.2214.109
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: StarTrail 6
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.2.2; STARADDICT III) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Mobile Safari/537.36
+  os:
+    name: Android
+    version: 4.2.2
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: SFR
+    model: Staraddict 3
+  os_family: Android
+  browser_family: Chrome
