--- a/regexes/client/browsers.yml
+++ b/regexes/client/browsers.yml
@@ -10,6 +10,66 @@
   name: 'Secure Browser'
   version: '$1'
 
+# Flow (https://www.ekioh.com/)
+- regex: 'Flow/(?:(\d+[\.\d]+))'
+  name: 'Flow'
+  version: '$1'
+  engine:
+    default: 'EkiohFlow'
+- regex: 'Ekioh/(?:(\d+[\.\d]+))'
+  name: 'Flow'
+  version: '$1'
+  engine:
+    default: 'EkiohFlow'
+
+# xStand (https://www.adnx.com/)
+- regex: 'xStand/(\d+[\.\d]+)'
+  name: 'xStand'
+  version: '$1'
+  engine:
+    default: 'Webkit'
+
+# Biyubi (http://www.biyubi.com/)
+- regex: 'Biyubi/(\d+[\.\d]+)'
+  name: 'Biyubi'
+  version: '$1'
+
+# Perfect Browser (http://www.perfectbrowser.com/)
+- regex: '(?:Perfect%20Browser(?:-iPad)?|Perfect(?:BrowserPro)?)/(\d+[\.\d]+)'
+  name: 'Perfect Browser'
+  version: '$1'
+  engine:
+    default: 'Webkit'
+
+# Phantom Browser (https://www.lg.com/)
+- regex: 'Browser/Phantom/V(\d+[\.\d]+)'
+  name: 'Phantom Browser'
+  version: '$1'
+
+# AwoX (https://www.awox.com.tr/)
+- regex: 'AwoX(?:/(\d+[\.\d]+))? Browser'
+  name: 'AwoX'
+  version: '$1'
+
+# Zetakey (https://www.zetakey.com/)
+- regex: 'Zetakey/(\d+[\.\d]+)'
+  name: 'Zetakey'
+  version: '$1'
+  engine:
+    default: 'Webkit'
+
+# PlayFree Browser
+- regex: 'PlayFreeBrowser/(?:(\d+[\.\d]+))?'
+  name: 'PlayFree Browser'
+  version: '$1'
+
+# Chim Lac (https://chimlac.com.vn/)
+- regex: '(?:chimlac_browser|chimlac)/(?:(\d+[\.\d]+))'
+  name: 'Chim Lac'
+  version: '$1'
+  engine:
+    default: 'Blink'
+
 # Odin (https://www.hisense.com/)
 - regex: 'Odin/(?:(\d+[\.\d]+))'
   name: 'Odin'
