feat(tests) added test for brand ZTE models: Nubia X6, Nubia My Prague, Nubia Z17S, Nubia Z17 Lite, Nubia Z17, Nubia M2, Nubia Z11 Max, Nubia Z11, Nubia Z9 feat(tests) added test for brand Apple models: iPad Air 2, iPad Mini 4
issue #6616

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16690,7 +16690,7 @@ ZTE:
       model: 'Nubia Z17 Mini S'
     - regex: 'NX591J(?:[);/ ]|$)'
       model: 'Nubia Z17 Lite'
-    - regex: 'NX595J'
+    - regex: 'NX595J(?:[);/ ]|$)'
       model: 'Nubia Z17S'
     - regex: 'NX612J(?:[);/ ]|$)'
       model: 'Nubia V18'
