Improves version detection for Windows Phone operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1728,3 +1728,10 @@
     short_name: FEN
     version: ""
     platform: ""
+-
+  user_agent: PlacesDll Win32/x4dXIL4zf4fEINN8j7e8GA:c5f40ce19e9659484ed40cba84c12227/3.4.422.8 (Windows Phone OS/8.0; NOKIA:Lumia 625; de-DE)
+  os:
+    name: Windows Phone
+    short_name: WPH
+    version: "8.0"
+    platform: ""
