Improves version detection for macOS operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1735,3 +1735,10 @@
     short_name: WPH
     version: "8.0"
     platform: ""
+-
+  user_agent: MAMPPRO/6.3.1 macOS/11.0.1
+  os:
+    name: Mac
+    short_name: MAC
+    version: 11.0.1
+    platform: ""
