Improves version detection for Android operating system

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -119,7 +119,7 @@
   name: 'Android'
   version: '$1'
 
-- regex: '(?:(?:Orca-)?Android|Adr)[ /](?:[a-z]+ )?(\d+[\.\d]*)'
+- regex: '(?:(?:Orca-)?Android|Adr)[ /]?(?:[a-z]+ )?(\d+[\.\d]*)'
   name: 'Android'
   version: '$1'
 
