Improves detection for Android operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1749,3 +1749,10 @@
     short_name: AND
     version: 4.1.1
     platform: ""
+-
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr CANVAS EXTREME EDITION; en-US; Micromax_A92) U2/1.0.0 UCBrowser/8.8.1.359 U2/1.0.0 Mobile
+  os:
+    name: Android
+    short_name: AND
+    version: ""
+    platform: ""
