--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -123,7 +123,7 @@
   name: 'Android'
   version: '$1'
 
-- regex: 'Android|Silk-Accelerated=[a-z]{4,5}'
+- regex: ' Adr |Android|Silk-Accelerated=[a-z]{4,5}'
   name: 'Android'
   version: ''
 
