Improves detection for Android operating system

--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -123,6 +123,10 @@
   name: 'Android'
   version: '$1'
 
+- regex: '(?:Allview_TX1_Quasar|Cosmote_My_mini_Tab) (\d+[\.\d]*)'
+  name: 'Android'
+  version: '$1'
+
 - regex: ' Adr |Android|Silk-Accelerated=[a-z]{4,5}'
   name: 'Android'
   version: ''
