Improves detection for Windows operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1770,3 +1770,10 @@
     short_name: AND
     version: 4.0.4
     platform: ""
+-
+  user_agent: Microsoft Office OneNote/16.0.12527.21294 (Windows/10.0; Desktop x86; es-MX; Desktop app; Acer/Aspire SW5-012)
+  os:
+    name: Windows
+    short_name: WIN
+    version: "10.0"
+    platform: x86
