--- a/Tests/fixtures/tablet.yml
+++ b/Tests/fixtures/tablet.yml
@@ -1767,7 +1767,7 @@
   user_agent: Mozilla/5.0 (Linux; U;Android4.1.1;en-ru; LC0816C Build/JRO03C) AppleWebKit/534.30 (KHTML, like Gecko) Version/4.0 4.1.1; fr-sa; Build/JRO03CSafari/534.30
   os:
     name: Android
-    version: ""
+    version: 4.1.1
     platform: ""
   client:
     type: browser
