--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -248,7 +248,7 @@
 ##########
 # Windows
 ##########
-- regex: 'Windows/(\d+[\.\d]+)'
+- regex: 'Windows/(\d+\.\d+)'
   name: 'Windows'
   version: '$1'
 
