--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -110,7 +110,7 @@
     name: Haiku OS
     short_name: HAI
     version: ""
-    platform: ""
+    platform: x86
 -
   user_agent: Mozilla/4.08 (Charon; Inferno)
   os:
@@ -712,7 +712,7 @@
     name: Remix OS
     short_name: REM
     version: "1"
-    platform:
+    platform: x86
 -
   user_agent: Browse/0.6.mini (Linux 3.4.0+; RemixOS 6.0; Motorola Moto G 2014; en_us) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/44.0.2403.119 Desktop
   os:
