--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2541,7 +2541,7 @@
   os:
     name: Android
     version: "7.1.1"
-    platform: "x86"
+    platform: x86
   client:
     type: mobile app
     name: Google Search App
