feat(tests) added test for brand Nokia model: 5233 feat(tests) added test for brand ZTE models: Blade L3 Plus, Blade L3, Blade V6 Max, Blade V6 Plus, Blade V6, Blade V7, Blade X7

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -16812,26 +16812,20 @@ ZTE:
       model: 'Blade V6 Max'
     - regex: 'Blade V6 Plus(?:[);/ ]|$)'
       model: 'Blade V6 Plus'
-    - regex: 'Blade V6(?:[);/ ]|$)'
-      model: 'Blade V6'
     - regex: 'Blade (?:V7 Lite|V0720)(?:[);/ ]|$)'
       model: 'Blade V7 Lite'
-    - regex: 'Blade V7(?:[);/ ]|$)'
-      model: 'Blade V7'
-    - regex: 'Blade X7(?:[);/ ]|$)'
-      model: 'Blade X7'
-    - regex: 'Blade X9(?:[);/ ]|$)'
-      model: 'Blade X9'
+    - regex: 'Blade V([67])(?:[);/ ]|$)'
+      model: 'Blade V$1'
+    - regex: 'Blade X([79])(?:[);/ ]|$)'
+      model: 'Blade X$1'
     - regex: 'Blade V8Q(?:[);/ ]|$)'
       model: 'Blade V8Q'
     - regex: 'Blade V8 SE(?:[);/ ]|$)'
       model: 'Blade V8 SE'
-    - regex: 'Blade V9 Vita(?:[);/ ]|$)'
-      model: 'Blade V9 Vita'
+    - regex: 'Blade V(9|10) Vita(?:[);/ ]|$)'
+      model: 'Blade V$1 Vita'
     - regex: 'Blade V([89])(?:[);/ ]|$)'
       model: 'Blade V$1'
-    - regex: 'Blade V10 Vita(?:[);/ ]|$)'
-      model: 'Blade V10 Vita'
     - regex: 'BLADE V0820(?:[);/ ]|$)'
       model: 'Blade V8 Lite'
     - regex: 'BLADE V0850(?:[);/ ]|$)'
@@ -16974,7 +16968,7 @@ ZTE:
     # explicit tablet models
     - regex: 'K83CA(?:[);/ ]|$)'
       device: 'tablet'
-      model: 'Grand X View 3'
+      model: 'Grand X View 3'
 
     - regex: 'AxonPhone ([^;/]+) Build'
       model: 'AxonPhone $1'
