feat(device) detect brand CHIA model: TREO TAB8G feat(tests) added test for brand Nokia models: Lumia 730, Lumia 830 feat(tests) added test for brand Palm model: Treo 800w

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -456,6 +456,17 @@ RIM:
     - regex: 'BlackBerry'
       model: 'BlackBerry'
 
+# CHIA
+CHIA:
+  regex: '(SVEGLIO[ _][QH]1|TREO_TAB8G)(?:[);/ ]|$)'
+  device: 'smartphone'
+  models:
+    - regex: 'SVEGLIO[ _]([QH]1)'
+      model: 'Sveglio $1'
+    - regex: 'TREO_TAB8G'
+      device: 'tablet'
+      model: 'TREO TAB8G'
+
 # PALM
 Palm:
   regex: '(?:Pre|Pixi)/(\d+)\.(\d+)|Palm|Treo|Xiino'
@@ -20232,14 +20243,6 @@ Centric:
       model: 'P1'
     - regex: '(?:Centric[- ])?CM3331'
       model: 'L3'
-
-# CHIA
-CHIA:
-  regex: 'SVEGLIO[ _][QH]1(?:[);/ ]|$)'
-  device: 'smartphone'
-  models:
-    - regex: 'SVEGLIO[ _]([QH]1)'
-      model: 'Sveglio $1'
 
 # Kata mobile (secure.katadigital.com)
 Kata:
