--- a/Tests/fixtures/smartphone-13.yml
+++ b/Tests/fixtures/smartphone-13.yml
@@ -9079,3 +9079,57 @@
     model: Blade X7
   os_family: Android
   browser_family: Android Browser
+-
+  user_agent: Mozilla/5.0 (Windows Phone 10.0; Android 6.0.1; NOKIA; Lumia 730 Dual SIM) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/52.0.2743.116 Mobile Safari/537.36 Edge/15.15254
+  os:
+    name: Windows Phone
+    version: "10.0"
+    platform: ""
+  client:
+    type: browser
+    name: Microsoft Edge
+    version: "15.15254"
+    engine: Edge
+    engine_version: "15.15254"
+  device:
+    type: smartphone
+    brand: Nokia
+    model: Lumia 730
+  os_family: Windows Mobile
+  browser_family: Internet Explorer
+-
+  user_agent: UCWEB/2.0 (Windows; U; wds 8.10; ru-RU; NOKIA; RM-984_1045) U2/1.0.0 UCBrowser/4.2.1.541 U2/1.0.0 Mobile
+  os:
+    name: Windows Phone
+    version: "8.10"
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 4.2.1.541
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Nokia
+    model: Lumia 830
+  os_family: Windows Mobile
+  browser_family: Unknown
+-
+  user_agent: Treo800w/v0100 Mozilla/4.0 (compatible; MSIE 4.01; Windows CE, PPC; 320x320) (compatible; MSIE 6.0; Windows CE; IEMobile 7.11)
+  os:
+    name: Windows CE
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: IE Mobile
+    version: "7.11"
+    engine: Trident
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Palm
+    model: Treo 800w
+  os_family: Windows Mobile
+  browser_family: Internet Explorer
