--- a/Tests/fixtures/smartphone-19.yml
+++ b/Tests/fixtures/smartphone-19.yml
@@ -9945,3 +9945,39 @@
     model: Blade V8Q
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 4.1.1; HP Slate 7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/71.0.3578.99 Safari/537.36
+  os:
+    name: Android
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome
+    version: 71.0.3578.99
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: HP
+    model: Slate 7
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (webOS/2.1.1; U; xx) AppleWebKit/532.2 (KHTML, like Gecko) Version/1.0 Safari/532.2 P160U/1.0
+  os:
+    name: webOS
+    version: 2.1.1
+    platform: ""
+  client:
+    type: browser
+    name: wOSBrowser
+    version: 2.1.1
+    engine: WebKit
+    engine_version: "532.2"
+  device:
+    type: smartphone
+    brand: HP
+    model: Veer
+  os_family: Other Mobile
+  browser_family: Unknown
