feat(tests) added test for brand Qilive model: Q6 feat(tests) added test for brand SANYO model: WX310SA feat(tests) added test for brand Sharp model: Aquos Phone SH-06D feat(tests) added test for brand Huawei models: Honor View 10, Y5 Pro (2017), Honor View 20 feat(tests) added test for brand Samsung models: Galaxy Tab S3 9.7" WiFi, Galaxy Pro, Galaxy Tab A7 10.4" (2020) WiFi
issue #6616

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13689,7 +13689,7 @@ Sanyo:
     - regex: 'SCP-?6780'
       model: 'Innuendo'
 
-    - regex: 'SANYO[ \-_]([a-z0-9\-]+)'
+    - regex: 'SANYO[ /_-]([a-z0-9\-]+)'
       model: '$1'
     - regex: 'MobilePhone ([a-z0-9\-]+)'
       model: '$1'
@@ -13934,7 +13934,7 @@ Sharp:
       model: 'Aquos S2 (C10)'
     - regex: '(?:SH-02E|SH-01[GH]|SH-04H)(?:[);/ ]|$)'
       model: 'Aquos Phone Zeta'
-    - regex: 'SH06D(?:[);/ ]|$)'
+    - regex: 'SH-?06D(?:[);/ ]|$)'
       model: 'Aquos Phone SH-06D'
     - regex: '(SHL2[25]|SH-M01)(?:[);/ ]|$)'
       model: 'Aquos Phone $1'
