--- a/Tests/fixtures/smartphone-16.yml
+++ b/Tests/fixtures/smartphone-16.yml
@@ -9021,3 +9021,70 @@
     model: Kis 3
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; Android 9; PCT-L29) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.66 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "9"
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Mobile
+    version: 87.0.4280.66
+    engine: Blink
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: Huawei
+    model: Honor View 20
+  os_family: Android
+  browser_family: Chrome
+-
+  user_agent: Mozilla/3.0(WILLCOM;SANYO/WX310SA/2;1/1/C128) NetFront/3.3
+  os: [ ]
+  client:
+    type: browser
+    name: NetFront
+    version: "3.3"
+    engine: NetFront
+    engine_version: "3.3"
+  device:
+    type: feature phone
+    brand: Sanyo
+    model: WX310SA
+  os_family: Unknown
+  browser_family: NetFront
+-
+  user_agent: 'Mozilla/5.0 (Linux; Android 5.1; Q6T7IN Build/LMY47I; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/66.0.3359.158 Safari/537.36 [FB_IAB/FB4A;FBAV/173.0.0.62.99;]'
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: mobile app
+    name: Facebook
+    version: 173.0.0.62.99
+  device:
+    type: tablet
+    brand: Qilive
+    model: Q6
+  os_family: Android
+  browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android 2.3.5; ja-jp; SH-06D Build/S7231) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
+  os:
+    name: Android
+    version: 2.3.5
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "533.1"
+  device:
+    type: smartphone
+    brand: Sharp
+    model: Aquos Phone SH-06D
+  os_family: Android
+  browser_family: Android Browser
