feat(tests) added test for brand BB Mobile model: Techno 7.0" Pioneer LTE S700BF feat(tests) added test for brand HP model: iPAQ 610 feat(tests) added test for brand Trevi model: MINITAB 3G V feat(tests) added test for brand Uhappy model: UP580
issue #6616

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -517,7 +517,7 @@ HP:
       device: 'tablet'
     - regex: 'HP; ([^;/)]+)'
       model: '$1'
-    - regex: 'HP(?: )?iPAQ(?: )?([a-z0-9]+)'
+    - regex: 'HP ?iPAQ ?([a-z0-9]+)'
       model: 'iPAQ $1'
     - regex: 'webOS.*(P160U)'
       model: 'Veer'
