Adds detection for Manhattan brand

--- a/regexes/device/televisions.yml
+++ b/regexes/device/televisions.yml
@@ -344,6 +344,14 @@ Luxor:
   device: 'tv'
   model: ''
 
+# Manhattan (https://manhattan-tv.com/)
+Manhattan:
+  regex: 'Manhattan'
+  device: 'tv'
+  models:
+    - regex: 'T3'
+      model: 'T3'
+
 # MediaTek
 MediaTek:
   regex: 'MTK|MediaTek;'
