Improves Nvidia detection and adds detection for Nvidia SHIELD TV, SHIELD TV Pro

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -10715,7 +10715,7 @@ Nous:
 
 # Nvidia
 Nvidia:
-  regex: 'SHIELD Tablet K1|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
+  regex: 'NVIDIA|SHIELD Tablet K1|SHIELD Android TV|Tegra(Note-P1640| Note 7)'
   device: 'tablet'
   models:
     - regex: 'TegraNote-P1640'
@@ -10724,6 +10724,12 @@ Nvidia:
       model: '$1'
     - regex: 'SHIELD Android TV'
       model: 'SHIELD Android TV'
+      device: 'tv'
+    - regex: 'NVIDIA_SHIELD_PRO_2019'
+      model: 'SHIELD TV Pro'
+      device: 'tv'
+    - regex: 'NVIDIA Shield'
+      model: 'SHIELD TV'
       device: 'tv'
 
 # O+ (OPlus)
