--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9497,3 +9497,39 @@
     model: T3
   os_family: Unknown
   browser_family: Unknown
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.0.1; NVIDIA Shield; smart-tv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: "537.36"
+  device:
+    type: tv
+    brand: Nvidia
+    model: SHIELD TV
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Mozilla/5.0 (Linux; U; Android 5.0.1; NVIDIA_SHIELD_PRO_2019; smart-tv) ShieldExperience/8.0.0 (32.5.205.42; mdarcy) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/76.0.3809.89 Safari/537.36
+  os:
+    name: Android
+    version: 5.0.1
+    platform: ""
+  client:
+    type: browser
+    name: Chrome Webview
+    version: 76.0.3809.89
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Nvidia
+    model: SHIELD TV Pro
+  os_family: Android
+  browser_family: Chrome
