--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9533,3 +9533,21 @@
     model: SHIELD TV Pro
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: SRAF/5.0 AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.103 Safari/537.36 HbbTV/1.5.1 (Technicolor; TalkTalk STB; uzw4054ttg; ANDROID 10; YouView) ( MSE H264 H265 DVB DASH MPEG MP4)
+  os:
+    name: Android
+    version: "10"
+    platform: ""
+  client:
+    type: browser
+    name: Seraphic Sraf
+    version: "5.0"
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tv
+    brand: Technicolor
+    model: UZW4054TTG
+  os_family: Android
+  browser_family: Chrome
