Adds detection for Western Digital brand

--- a/Tests/fixtures/tv.yml
+++ b/Tests/fixtures/tv.yml
@@ -9551,3 +9551,39 @@
     model: UZW4054TTG
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: Mozilla/5.0 (QtEmbedded; U; Linux; C) AppleWebKit/534.34 (KHTML, like Gecko) SigmaDesigns/0.5 Safari/534.34; Westerndigital/Streamer2010/Gen3-2.02.01
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: "534.34"
+  device:
+    type: tv
+    brand: Western Digital
+    model: Streamer (2010)
+  os_family: GNU/Linux
+  browser_family: Safari
+- 
+  user_agent: Opera/9.80 (Linux armv6l; Opera TV Store/4532; U; Mozilla/5.0 (QtEmbedded; U; Linux; C) AppleWebKit/533.3 (KHTML, like Gecko) WDSimpleBrowser/0.2.10 Safari/533.3; en) Presto/2.10.250 Version/11.60
+  os:
+    name: GNU/Linux
+    version: ""
+    platform: ARM
+  client:
+    type: browser
+    name: Opera
+    version: "11.60"
+    engine: Presto
+    engine_version: 2.10.250
+  device:
+    type: tv
+    brand: Western Digital
+    model: ""
+  os_family: GNU/Linux
+  browser_family: Opera
