--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -13844,7 +13844,7 @@ Turbo:
 
 # Sigma
 Sigma:
-  regex: 'Sigma|(X[_-]Style[ _]?Tab[_ ]A([0-9]{2,3})|X[-_ ]?treme[-_ ]?PQ[0-9]{2}|X-Style_S5501)(?:[);/ ]|$)'
+  regex: 'Sigma(<!Designs)|(X[_-]Style[ _]?Tab[_ ]A([0-9]{2,3})|X[-_ ]?treme[-_ ]?PQ[0-9]{2}|X-Style_S5501)(?:[);/ ]|$)'
   device: 'smartphone'
   models:
     - regex: '(?:Sigma[ _])?X[-_ ]?treme[-_ ]?PQ([0-9]{2})(?:[);/ ]|$)'
@@ -16485,6 +16485,14 @@ Freetel:
       model: 'Samurai Rei'
     - regex: 'FTJ152E'
       model: 'Katana 1'
+
+# Western Digital
+Western Digital:
+  regex: 'Westerndigital|WDSimpleBrowser'
+  device: 'tv'
+  models:
+    - regex: 'Streamer2010'
+      model: 'Streamer (2010)'
 
 # Zeemi
 Zeemi:
