--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -8975,3 +8975,21 @@
     model: Honor Pad 2
   os_family: Android
   browser_family: Chrome
+- 
+  user_agent: UCWEB/2.0 (MIDP-2.0; U; Adr 4.0.4; en-US; Q93S) U2/1.0.0 UCBrowser/9.7.0.520 U2/1.0.0 Mobile
+  os:
+    name: Android
+    version: 4.0.4
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 9.7.0.520
+    engine: ""
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Wintouch
+    model: Q93S
+  os_family: Android
+  browser_family: Unknown
