Adds detection for ONN O8HD

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17913,7 +17913,7 @@ NEXON:
 
 # ONN
 ONN:
-  regex: '(ONA19TB00[327]|10000520[6-9])(?:[);/ ]|$)'
+  regex: '(ONA19TB00[327]|10000520[6-9]|O8HD)(?:[);/ ]|$)'
   device: 'tablet'
   model: '$1'
 
