--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -8993,3 +8993,21 @@
     model: Q93S
   os_family: Android
   browser_family: Unknown
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.1.1; O8HD Build/JRO03C)
+  os:
+    name: Android
+    version: 4.1.1
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: ONN
+    model: O8HD
+  os_family: Android
+  browser_family: Android Browser
