--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4555,13 +4555,13 @@ Echo Mobiles:
 
 # ECS
 ECS:
-  regex: '(?:TA10CA3|TM105A?|TR10CS1)(?:[);/ ]|$)'
+  regex: '(?:TA10CA3|TM105A?|TR10[CR]S1)(?:[);/ ]|$)'
   device: 'tablet'
   models:
     - regex: 'TA10CA3(?:[);/ ]|$)'
       model: 'TA10CA3'
-    - regex: 'TR10CS1(?:[);/ ]|$)'
-      model: 'TR10CS1'
+    - regex: '(TR10[CR]S1)(?:[);/ ]|$)'
+      model: '$1'
     - regex: 'TM105A(?:[);/ ]|$)'
       model: 'TM105A'
     - regex: 'TM105(?:[);/ ]|$)'
