Improves detection for Datawind and adds detection for Datawind Ubislate 7W

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -17936,9 +17936,14 @@ EXO:
 
 # Datawind
 Datawind:
-  regex: '(DW-PS3G5)(?:[);/ ]|$)'
+  regex: 'DW-[A-Z0-9]{5}(?:[);/ ]|$)'
   device: 'smartphone'
-  model: 'Pocket Surfer 3G5'
+  models:
+    - regex: '(DW-PS3G5)(?:[);/ ]|$)'
+      model: 'Pocket Surfer 3G5'
+    - regex: 'DW-UBT7W'
+      device: 'tablet'
+      model: 'Ubislate 7W'
 
 # Droxio
 Droxio:
