--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9290,3 +9290,21 @@
     model: W717
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/2.1.0 (Linux; U; Android 5.1; MyPhoneMY27 Build/LMY47D)
+  os:
+    name: Android
+    version: "5.1"
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: MyPhone
+    model: my27
+  os_family: Android
+  browser_family: Android Browser
