--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -11911,7 +11911,6 @@ RoverPad:
     - regex: 'RoverPad (10.4|Air S70|9.7 3G|Sky 9.7|3W A73|3W7|3WT70|3W9.4)(?:[);/ ]|$)'
       model: '$1'
 
-
 # Roadrover
 Roadrover:
   regex: 'Roadrover ChangAn S'
@@ -11926,6 +11925,14 @@ RT Project:
     - regex: 'Shock 5'
       model: 'Shock 5'
 
+# S-TELL
+S-TELL:
+  regex: 'S-TELL'
+  device: 'smartphone'
+  models:
+    - regex: 'M477'
+      model: 'M477'
+
 # Safaricom
 Safaricom:
   regex: 'NEON_RAY'
@@ -11933,7 +11940,6 @@ Safaricom:
   models:
     - regex: 'NEON_RAY'
       model: 'Neon Ray'
-
 
 # Santin
 Santin:
