Adds detection for Acteck brand and Acteck Bleck

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -823,6 +823,12 @@ MicroMax:
     - regex: '4Good[ _]([^);/ ]+)'
       model: '$1'
 
+# Acteck
+Acteck:
+  regex: 'BLECK'
+  device: 'tablet'
+  model: 'Bleck'
+
 # Alba
 Alba:
   regex: 'Alba 57'
