--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9047,3 +9047,21 @@
     model: Ubislate 7W
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; BLECK Build/KVT49L)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Acteck
+    model: Bleck
+  os_family: Android
+  browser_family: Android Browser
