feat(tests) added test for brand ZTE models: Majesty Pro LTE, Majesty Pro Plus LTE, Midnight Pro LTE, Fanfare, Maven, Maven 2, Fanfare 2, MAX Blue LTE feat(tests) added test for brand BB Mobile model: Techno 10.0" LTE TQ060X feat(tests) added test for brand Positivo BGH model: T1060B feat(tests) added test for brand Zuum models: E60, E40, M50, Stellar Z, Stedi, Magno, Covet feat(device) detect Zuum models: Magno Plus, Magno C, Covet Z, Covet Pro Lite, Covet Pro feat(device) detect Onix model: S405
issue #6616

--- a/Tests/fixtures/smartphone-17.yml
+++ b/Tests/fixtures/smartphone-17.yml
@@ -2019,7 +2019,7 @@
   device:
     type: smartphone
     brand: ZTE
-    model: X991
+    model: Rio
   os_family: Unknown
   browser_family: Unknown
 - 
