Adds detection for EKT EK-5540

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -4583,11 +4583,11 @@ EE:
 
 # EKT
 EKT:
-  regex: 'EK-[A-Z0-9]{5}'
+  regex: 'EK-(?:5540|T7020)'
   device: 'tablet'
   models:
-    - regex: 'EK-T7020'
-      model: 'T7020'
+    - regex: 'EK-(5540|T7020)'
+      model: 'EK-$1'
 
 # Eks Mobility
 Eks Mobility:
