--- a/Tests/fixtures/tablet-1.yml
+++ b/Tests/fixtures/tablet-1.yml
@@ -9080,6 +9080,24 @@
   device:
     type: tablet
     brand: EKT
-    model: T7020
+    model: EK-T7020
+  os_family: Android
+  browser_family: Android Browser
+- 
+  user_agent: Dalvik/1.6.0 (Linux; U; Android 4.4.2; EK-5540 Build/KOT49H)
+  os:
+    name: Android
+    version: 4.4.2
+    platform: ""
+  client:
+    type: browser
+    name: Android Browser
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: tablet
+    brand: EKT
+    model: EK-5540
   os_family: Android
   browser_family: Android Browser
