Adds detection for PageThing

--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3978,7 +3978,6 @@
     name: MuscatFerret
     category: Crawler
     url: http://www.webtop.com/
-
 -
   user_agent: Quora-Bot/1.0 (http://www.quora.com)
   bot:
@@ -3988,3 +3987,12 @@
     producer:
       name: Quora
       url: https://www.quora.com/
+-
+  user_agent: PageThing.com
+  bot:
+    name: PageThing
+    category: Crawler
+    url: https://www.pagething.com/
+    producer:
+      name: SPECIALNOISE LTD
+      url: https://www.specialnoise.com/
