Adds detection for RIM BlackBerry Curve 9320

--- a/Tests/fixtures/smartphone-1.yml
+++ b/Tests/fixtures/smartphone-1.yml
@@ -9344,3 +9344,21 @@
     model: EK-5336
   os_family: Android
   browser_family: Android Browser
+- 
+  user_agent: UCWEB/2.0(BlackBerry; U; 9.49.0.77; en-us; 9320/9.49.0.77) U2/1.0.0 UCBrowser/8.1.0.216 U2/1.0.0 Mobile
+  os:
+    name: BlackBerry OS
+    version: ""
+    platform: ""
+  client:
+    type: browser
+    name: UC Browser
+    version: 8.1.0.216
+    engine: ""
+    engine_version: ""
+  device:
+    type: smartphone
+    brand: RIM
+    model: Curve 9320
+  os_family: BlackBerry
+  browser_family: Unknown
