--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -414,7 +414,7 @@ CnM:
 
 # RIM/BlackBerry
 RIM:
-  regex: 'BB10;|BlackBerry|rim[0-9]+|PlayBook|STV100-[1234]|STH100-[12]|BBA100-[12]|BBB100-[1234567]|BBC100-1|BBD100-[126]|BBE100-[123456789]|BBF100-[123456789]|BBG100-1|BBH100-1'
+  regex: 'BB10;|BlackBerry|rim[0-9]+|PlayBook|STV100-[1234]|STH100-[12]|BBA100-[12]|BBB100-[1234567]|BBD100-[126]|BB[EF]100-[123456789]|BB[CGH]100-1|9320'
   device: 'smartphone'
   models:
     - regex: 'BBA100-[12]'
@@ -450,6 +450,8 @@ RIM:
       model: 'BlackBerry $1'
     - regex: 'rim([0-9]+)'
       model: 'BlackBerry $1'
+    - regex: '9320'
+      model: 'Curve 9320'
     - regex: 'BlackBerry'
       model: 'BlackBerry'
 
