Improves version detection for Android operating system

--- a/Tests/Parser/fixtures/oss.yml
+++ b/Tests/Parser/fixtures/oss.yml
@@ -1777,3 +1777,38 @@
     short_name: WIN
     version: "10.0"
     platform: x86
+-
+  user_agent: Mozilla/5.0 (Linux; U; Android jelly bean 4.2.2; es-co; HUAWEI Y210-0151 Build/HuaweiY210-0151) AppleWebKit/533.1 (KHTML, like Gecko) Version/4.0 Mobile Safari/533.1
+  os:
+    name: Android
+    short_name: AND
+    version: 4.2.2
+    platform: ""
+-
+  user_agent: Dalvik/1.4.0 (Linux; U; Android Kit Kat 4.4; HUAWEI Y210-0151 Build/HuaweiY210-0151)
+  os:
+    name: Android
+    short_name: AND
+    version: "4.4"
+    platform: ""
+-
+  user_agent: Dalvik/1.4.0 (Linux; U; Android S.O. Ginger Bread 2.3.7; E15a Sony Xperia x8 Build/3.0.1.A.0.145)
+  os:
+    name: Android
+    short_name: AND
+    version: 2.3.7
+    platform: ""
+-
+  user_agent: Dalvik/1.6.0 (Linux; U; Android The FireCyano 4.0.4; Xperia U Build/IMM76L)
+  os:
+    name: Android
+    short_name: AND
+    version: 4.0.4
+    platform: ""
+-
+  user_agent: 'Dalvik/1.6.0 (Linux; U; Android Ice Bean: 4.3 / Android: 4.0.4'
+  os:
+    name: Android
+    short_name: AND
+    version: 4.0.4
+    platform: ""
