--- a/regexes/oss.yml
+++ b/regexes/oss.yml
@@ -127,9 +127,13 @@
   name: 'Android'
   version: '$1'
 
-- regex: ' Adr |Android|Silk-Accelerated=[a-z]{4,5}'
+- regex: 'Android ?(?:jelly bean|Kit Kat|S.O. Ginger Bread|The FireCyano|:) (\d+[\.\d]*)'
   name: 'Android'
-  version: ''
+  version: '$1'
+
+- regex: '(?:TwitterAndroid).*[ /](?:[a-z]+ )?(\d+[\.\d]*)'
+  name: 'Android'
+  version: '$1'
 
 - regex: '(?:TwitterAndroid).*[ /](?:[a-z]+ )?(\d+[\.\d]*)'
   name: 'Android'
