--- a/regexes/client/mobile_apps.yml
+++ b/regexes/client/mobile_apps.yml
@@ -283,6 +283,7 @@
 
 - regex: 'Microsoft Office Mobile/([\d\.]+)'
   name: 'Microsoft Office Mobile'
+  version: '$1'
 
 - regex: 'TikTok[/ ](\d+\.(?:[\.\d]+))?'
   name: 'TikTok'
