Adds detection for Apple Watch SE 40mm and Watch SE 44mm

--- a/Tests/fixtures/wearable.yml
+++ b/Tests/fixtures/wearable.yml
@@ -375,3 +375,55 @@
     model: ZenWatch 2
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: atc/1.0 watchOS/7.3 model/Watch5,9 hwp/t8006 build/18S801 (6; dt:233)
+  os:
+    name: watchOS
+    version: "7.3"
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch SE 40mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/7.0.2 model/Watch5,10 hwp/t8006 build/18R402 (6; dt:233)
+  os:
+    name: watchOS
+    version: 7.0.2
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch SE 44mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/7.0.2 model/Watch5,11 hwp/t8006 build/18R402 (6; dt:234)
+  os:
+    name: watchOS
+    version: 7.0.2
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch SE 40mm
+  os_family: iOS
+  browser_family: Unknown
+-
+  user_agent: atc/1.0 watchOS/7.2 model/Watch5,12 hwp/t8006 build/18S563 (6; dt:234)
+  os:
+    name: watchOS
+    version: "7.2"
+    platform: ARM
+  client: null
+  device:
+    type: wearable
+    brand: Apple
+    model: Watch SE 44mm
+  os_family: iOS
+  browser_family: Unknown
