--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -554,6 +554,14 @@ Apple:
       device: 'wearable'
       model: 'Watch Series 3 42mm'
 
+    - regex: 'Watch5,(?:9|11)'
+      device: 'wearable'
+      model: 'Watch SE 40mm'
+
+    - regex: 'Watch5,1[02]'
+      device: 'wearable'
+      model: 'Watch SE 44mm'
+
     - regex: 'Watch([456]),[13]'
       device: 'wearable'
       model: 'Watch Series $1 40mm'
