Adds detection for MacBook Pro 15" (2006)

--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -630,6 +630,10 @@ Apple:
       device: 'desktop'
       model: 'MacBook Air 13" (2020)'
 
+    - regex: 'MacBookPro1(?:%2C|,)1'
+      device: 'desktop'
+      model: 'MacBook Pro 15" (2006)'
+
     - regex: 'MacBookPro4(?:%2C|,)1'
       device: 'desktop'
       model: 'MacBook Pro (2008)'
