--- a/Tests/fixtures/desktop.yml
+++ b/Tests/fixtures/desktop.yml
@@ -6754,3 +6754,21 @@
     model: MacBook Pro 13" (2020)
   os_family: Mac
   browser_family: Unknown
+- 
+  user_agent: Safari/5525.27.1 CFNetwork/339.5 Darwin/9.5.0 (i386) (MacBookPro1,1)
+  os:
+    name: Mac
+    version: "10.5"
+    platform: x86
+  client:
+    type: browser
+    name: Safari
+    version: ""
+    engine: WebKit
+    engine_version: ""
+  device:
+    type: desktop
+    brand: Apple
+    model: MacBook Pro 15" (2006)
+  os_family: Mac
+  browser_family: Safari
